--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 $cdnurl: "{{ site.cdnurl }}";
 
-$max-page-width: 65rem;
+$max-page-width: 80rem;
 
 $screen-width-s: 20rem;
 $screen-width-m: 32rem;
